--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: c
-install: sudo apt-get install make swi-prolog
+before_install:
+  - sudo add-apt-repository -y ppa:swi-prolog/stable
+  - sudo apt-get update -qq
+  - sudo apt-get install make swi-prolog
 script: make test
